[gd_scene load_steps=8 format=3 uid="uid://c8y7x4qvnwqxf"]

[ext_resource type="Script" path="res://scripts/FlightTestController.gd" id="1_flight_test"]
[ext_resource type="PackedScene" uid="uid://bvqxj8n3qwxhm" path="res://scenes/airplane/BasicAirplane.tscn" id="2_airplane"]
[ext_resource type="Script" path="res://scripts/components/ElasticBandLauncher.gd" id="3_launcher"]
[ext_resource type="Script" path="res://scripts/components/FlightCamera.gd" id="4_flight_camera"]

[sub_resource type="BoxMesh" id="BoxMesh_launcher_base"]
size = Vector3(0.5, 0.2, 1.0)

[sub_resource type="BoxMesh" id="BoxMesh_elastic_band"]
size = Vector3(0.1, 0.1, 0.8)

[sub_resource type="PlaneMesh" id="PlaneMesh_ground"]
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(50, 0.1, 50)

[node name="FlightTest" type="Node3D"]
script = ExtResource("1_flight_test")

[node name="ElasticBandLauncher" type="Node3D" parent="."]
script = ExtResource("3_launcher")
max_pull_distance = 3.0
launch_force_multiplier = 8.0

[node name="LauncherBase" type="MeshInstance3D" parent="ElasticBandLauncher"]
mesh = SubResource("BoxMesh_launcher_base")

[node name="ElasticBand" type="MeshInstance3D" parent="ElasticBandLauncher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.4)
mesh = SubResource("BoxMesh_elastic_band")

[node name="AirplaneAttachmentPoint" type="Node3D" parent="ElasticBandLauncher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="BasicAirplane" parent="." instance=ExtResource("2_airplane")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="FlightCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 8)
script = ExtResource("4_flight_camera")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 0)
light_energy = 0.8

[node name="Ground" type="StaticBody3D" parent="." groups=["ground"]]
collision_layer = 1
collision_mask = 0

[node name="GroundMesh" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("PlaneMesh_ground")

[node name="GroundCollision" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_ground")

[node name="UI" type="CanvasLayer" parent="."]

[node name="FlightInfo" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = -20.0
text = "Flight Test Loading..."
vertical_alignment = 2